Update active cases by day to exclude deaths under investigation.

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -29,21 +29,21 @@
   </div>
 </div>
 
-<!-- <div class="container-fluid">
+<div class="container-fluid">
   <div class="row">
     <div class="col-12 alert alert-notice text-center mb-0">
 
       <div class="container">
         <div class="row">
           <div class="col col-md-8 offset-md-2 text-left">
-            <p class="text-center">On Thursday, August 20, the City of El Paso reported 109 new COVID-19 cases. The State of Texas reported 34 delayed positive test results that have been added to total cases. <strong>Total cases</strong> increased by 143, but <strong>daily new cases</strong> only increased by 109.</p>
+            <p class="text-center">On Friday, August 28, the City of El Paso started to exclude deaths under investigation from the total number of active cases. Active cases have been revised from 3,100 to 2,994.</p>
           </div>
         </div>
       </div>
 
     </div>
   </div>
-</div> -->
+</div>
 
 <div class="container-fluid mb-4">
   <div class="row">
