Remove Twitter link.

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -250,7 +250,7 @@
     <div class="col-12 text-center text-lg-right">
       Not Affiliated with the <%= link_to "City of El Paso", "https://www.elpasotexas.gov" %> or the <%= link_to "City of El Paso Department of Public Health", "http://www.elpasotexas.gov/public-health" %>
       <div class="mt-2">
-        Site by <%= link_to "Brandon Silverstein", "https://twitter.com/thebsilverstein" %>
+        Site by Brandon Silverstein
       </div>
     </div>
   </div>
