--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -62,7 +62,10 @@ body {
     color: #fed907;
     font-weight: 800;
     display: block;
-    font-size: 1.8em;
+    font-size: 1.5em;
+    @media(min-width: 500px) {
+      font-size: 1.8em;
+    }
     line-height: 1.0em;
     &.deaths {
       color: #f70000;
