--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -65,7 +65,7 @@
         <div class="row">
           <div class="col col-md-10 offset-md-1 text-left">
             <h2><%= @last_updated_on.strftime("%A, %B %e") %>:<br><%= pluralize number_with_delimiter(@new_cases), "New Coronavirus Case" %><%= ", #{pluralize(@delayed_results, "Delayed Positive Case") if @delayed_results > 0}" %>, <%= pluralize @new_deaths, "New Death" %> </h2>
-            <p class="text-center">Face coverings are now required to be worn in public. Do not gather in groups larger than ten people and maintain six feet of social distancing from others. <%= link_to "Read More", "http://epstrong.org/health-orders.php" %></p>
+            <p class="text-center">A 10 PM to 5 AM daily curfew is now in effect for the city of El Paso and El Paso County. <%= link_to "Read More", "https://www.texastribune.org/2020/10/25/el-paso-coronavirus-stay-home/" %></p>
           </div>
         </div>
       </div>
