Added error message.

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -41,21 +41,21 @@
   </div>
 </div>
 
-<!-- <div class="container-fluid">
+<div class="container-fluid">
   <div class="row">
     <div class="col-12 alert alert-notice text-center mb-0">
 
       <div class="container">
         <div class="row">
           <div class="col col-md-8 offset-md-2 text-left">
-            <p class="text-center">On Friday, August 28, the City of El Paso started to exclude deaths under investigation from the total number of active cases. Active cases have been revised from 3,100 to 2,994.</p>
+            <p class="text-center">Total cases and new cases by day data for November 2 – November 5 has been updated due to an error in how the city reported data on November 4.</p>
           </div>
         </div>
       </div>
 
     </div>
   </div>
-</div> -->
+</div>
 
 <div class="container-fluid mb-4">
   <div class="row">
