--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -242,6 +242,7 @@
     <div class="col">
       <h4>Helpful Resources</h4>
       <ul>
+        <li><%= link_to "Take the Pledge to Breakup COVID in EPTX", "https://www.facebook.com/TakeThePledge915/" %></li>
         <li><%= link_to "City of El Paso - COVID-19 Information & Resources", "http://epstrong.org" %></li>
         <li><%= link_to "Paso del Norte Health Foundation - El Paso COVID-19 Information Hub", "http://epcovid19.org" %></li>
       </ul>
