--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -242,7 +242,7 @@
     <div class="col">
       <h4>Helpful Resources</h4>
       <ul>
-        <li><%= link_to "Take the Pledge to Breakup COVID in EPTX", "https://www.facebook.com/TakeThePledge915/" %></li>
+        <li><%= link_to "Let’s Breakup COVID-19 in El Paso, Texas", "https://www.change.org/p/city-of-el-paso-texas-let-s-breakup-covid-19-in-el-paso-texas" %></li>
         <li><%= link_to "City of El Paso - COVID-19 Information & Resources", "http://epstrong.org" %></li>
         <li><%= link_to "Paso del Norte Health Foundation - El Paso COVID-19 Information Hub", "http://epcovid19.org" %></li>
       </ul>
