--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -9,7 +9,7 @@
     <div class="col-lg-6 text-center total-cases">
       
       <div class="container">
-        <div class="row justify-content-center">
+        <div class="row">
           <div class="col-4 mb-3">
             <span class="counter"><%= number_with_delimiter @total_cases %></span>
             <p>Total Cases</p>
