Small announcement update.

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -56,7 +56,7 @@
       <div class="container">
         <div class="row">
           <div class="col col-md-8 offset-md-2 text-left">
-            <p class="text-center">On February 10, the city of El Paso updated the process for calculating recoveries and active cases. <%= link_to "More Info", "https://kfoxtv.com/news/local/el-paso-health-officials-to-update-covid-19-active-cases-wednesday", target: "_blank" %></p>
+            <p class="text-center">On February 10, the city of El Paso updated their process for calculating recoveries and active cases. <%= link_to "More Info", "https://kfoxtv.com/news/local/el-paso-health-officials-to-update-covid-19-active-cases-wednesday", target: "_blank" %></p>
           </div>
         </div>
       </div>
