Peace and love.

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -56,7 +56,7 @@
       <div class="container">
         <div class="row">
           <div class="col col-md-12 text-center">
-            <p class="text-center">New data will no longer be added to this website as of April 22, 2021. For up-to-date COVID-19 data, please visit <%= link_to "epstrong.org", "https://www.epstrong.org/results.php", target: "_blank" %>. Stay safe!</p>
+            <p class="text-center">New data will no longer be added to this website as of April 22, 2021. For up-to-date COVID-19 data, please visit <%= link_to "epstrong.org", "https://www.epstrong.org/results.php", target: "_blank" %>. Stay safe! ✌️❤️</p>
           </div>
         </div>
       </div>
